--- a/env/.env.dev
+++ b/env/.env.dev
@@ -4,21 +4,25 @@
 TEAMSFX_ENV=dev
 APP_NAME_SUFFIX=dev
 # Updating AZURE_SUBSCRIPTION_ID or AZURE_RESOURCE_GROUP_NAME after provision may also require an update to RESOURCE_SUFFIX, because some services require a globally unique name across subscriptions/resource groups.
-AZURE_SUBSCRIPTION_ID=
-AZURE_RESOURCE_GROUP_NAME=
-RESOURCE_SUFFIX=
+AZURE_SUBSCRIPTION_ID=f4920bbe-0883-4475-9dbf-6480174a5f16
+AZURE_RESOURCE_GROUP_NAME=TaskStatusAppFrontend_group
+RESOURCE_SUFFIX=f366bb
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-TEAMS_APP_ID=
-TEAMS_APP_TENANT_ID=
-AAD_APP_CLIENT_ID=
-AAD_APP_OBJECT_ID=
-AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
-AAD_APP_TENANT_ID=
-AAD_APP_OAUTH_AUTHORITY_HOST=
-AAD_APP_OAUTH_AUTHORITY=
-TAB_AZURE_STORAGE_RESOURCE_ID=
-TAB_ENDPOINT=
-TAB_DOMAIN=
-API_FUNCTION_ENDPOINT=
-API_FUNCTION_RESOURCE_ID=
+TEAMS_APP_ID=a56fe797-0a5b-412d-a5a8-2e99adc0fdf3
+TEAMS_APP_TENANT_ID=47165d17-0fdb-4f2a-a567-116783fae3a5
+AAD_APP_CLIENT_ID=8683a504-2d79-4bbc-b443-ead232a69d63
+AAD_APP_OBJECT_ID=fcc4eb35-61f3-409e-b1fd-a6b3127af594
+AAD_APP_ACCESS_AS_USER_PERMISSION_ID=4fad17c6-206e-4ac1-ac72-72585f31c68a
+AAD_APP_TENANT_ID=47165d17-0fdb-4f2a-a567-116783fae3a5
+AAD_APP_OAUTH_AUTHORITY_HOST=https://login.microsoftonline.com
+AAD_APP_OAUTH_AUTHORITY=https://login.microsoftonline.com/47165d17-0fdb-4f2a-a567-116783fae3a5
+TAB_AZURE_STORAGE_RESOURCE_ID=/subscriptions/f4920bbe-0883-4475-9dbf-6480174a5f16/resourceGroups/TaskStatusAppFrontend_group/providers/Microsoft.Storage/storageAccounts/helloworldf366bb
+TAB_ENDPOINT=https://helloworldf366bb.z29.web.core.windows.net
+TAB_DOMAIN=helloworldf366bb.z29.web.core.windows.net
+API_FUNCTION_ENDPOINT=https://helloworldf366bb.azurewebsites.net
+API_FUNCTION_RESOURCE_ID=/subscriptions/f4920bbe-0883-4475-9dbf-6480174a5f16/resourceGroups/TaskStatusAppFrontend_group/providers/Microsoft.Web/sites/helloworldf366bb
+M365_TITLE_ID=U_9e51bd85-87b3-2010-5c94-7da5f297b0b2
+M365_APP_ID=a7bd15cb-a148-4cb5-a053-c80bc47ab86c
+DOTNET_PATH=C:\Users\ER\.fx\bin\dotnet
+TEAMS_APP_PUBLISHED_APP_ID=81510773-a813-43a6-a0d7-aa4e03e2218f
