--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.15/MicrosoftTeams.schema.json",
     "manifestVersion": "1.15",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "id": "${{TEAMS_APP_ID}}",
     "packageName": "com.microsoft.teams.extension",
     "developer": {
@@ -11,7 +11,7 @@
         "termsOfUseUrl": "${{TAB_ENDPOINT}}/index.html#/termsofuse"
     },
     "icons": {
-        "color": "color.png",
+        "color": "ColorSet.png",
         "outline": "outline.png"
     },
     "name": {
@@ -47,5 +47,42 @@
     "webApplicationInfo": {
         "id": "${{AAD_APP_CLIENT_ID}}",
         "resource": "api://${{TAB_DOMAIN}}/${{AAD_APP_CLIENT_ID}}"
-    }
+    },
+    "webApplicationInfo": {
+        "id": "${{AAD_APP_CLIENT_ID}}",
+        "resource": "api://${{TAB_DOMAIN}}/${{AAD_APP_CLIENT_ID}}"
+      },
+      "activities": {
+        "activityTypes": [
+          {
+            "type": "taskCompleted",
+            "description": "Task Completed Activity",
+            "templateText": "{actor} Completed task  {taskName} for you"
+          },
+          {
+            "type": "taskAdded",
+            "description": "Task Added Activity",
+            "templateText": "{actor} Added task  {taskName} Assigned To you"
+        }
+        ]
+      },
+      "authorization": {
+        "permissions": {
+          "resourceSpecific": [
+            {
+              "type": "Application",
+              "name": "TeamsActivity.Send.User"
+            },
+            {
+              "type": "Application",
+              "name": "TeamsActivity.Send.Group"
+            },
+            {
+              "type": "Application",
+              "name": "TeamsActivity.Send.Chat"
+            }
+          ]
+        }
+      }
+
 }
